# programmieruebung_2_abschlussprojekt

./: .gitignore  README.md  beschreibung.md  database_auth.py  debug.py  ekg_data.py  fix_db.py  json_to_sql.py  json_to_sql_extended.py  main.py  passwords.py  person.py  personen.db  pyproject.toml  requirements.txt  reset_passwords.py  sport_data.py  test_fit_load.py  test_import.py
data/: personen.db
data/sports_data/: 1_1751339329.fit  1_1751480241.fit  Morning_Ride.fit
