[project]
name = "programmieruebung_2_abschlussprojekt"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Simon Krainer", email = "ks0376@mci4me.at"},
]
dependencies = ["numpy>=2.0.2", "streamlit>=1.37.1", "plotly>=6.1.2", "matplotlib>=3.9.4", "pandas>=2.3.0", "streamlit-authenticator>=0.4.2", "altair==4.2.2"]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

