[project]
name = "programmieruebung_2_abschlussprojekt"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Simon Krainer", email = "ks0376@mci4me.at"},
]
dependencies = [
    "streamlit>=1.12.0",
    "pandas>=2.3.0",
    "plotly>=6.1.2",
    "matplotlib>=3.9.4",
    "altair<5.0",
    "streamlit-authenticator>=0.2.2",
    "fitparse>=1.2.0",
    "Pillow>=11.2.1",
    "numpy<2.1,>=1.21",
]
requires-python = ">=3.9"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
