[project]
name = "programmieruebung_2_abschlussprojekt"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "LukasKmci", email = "kl4641@mci4me.at"},
]
dependencies = [
    "streamlit>=1.46.1",
    "pandas>=2.3.0",
    "plotly>=6.1.2",
    "matplotlib>=3.9.4",
    "numpy>=2.0.2",
    "altair<5.0",
    "streamlit-authenticator>=0.2.2",
    "fitparse>=1.2.0",
]
requires-python = "==3.10.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
